--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,9 @@ body {
 }
 
 .search-form {
-    position: relative;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     margin-top: -86px;
     width: 568px;
     margin-left: auto;
@@ -217,6 +219,8 @@ body {
 }
 
 .search-form-title {
+    display: block;
+    width: 100%;
     background-color: #7B6458;
     color: #ffffff;
     text-align: center;
@@ -256,7 +260,7 @@ body {
 }
 
 .search-form-control {
-    background-color: #f2f2f2;
+    background-color: #EFF2D4;
     border: 0;
     text-transform: uppercase;
     font-weight: bold;
@@ -265,11 +269,28 @@ body {
     width: 100%;
 }
 
+.search-form-control:hover {
+    background-color: #EAEBCB;
+}
+
+.search-form-control:focus {
+    background-color: #ffffff;
+    border: #E6E6C5 solid 2px;
+}
+
 .search-form-control-calender {
     position: absolute;
     transform: translateY(-50%);
     top: 50%;
     right: 10px;
+}
+
+.search-form-control-calender:hover {
+    fill:#000000;
+}
+
+.search-form-control-calender:active {
+    fill:#7DB4AE;
 }
 
 .kids-amount-text {
@@ -282,11 +303,21 @@ body {
 
 .search-form-add-guests-button {
     border: 0;
-    background-color: #f2f2f2;
+    background-color: #EFF2D4;
+    color: #B3A986;
     font-weight: bold;
     text-align: center;
     height: 38px;
     min-width: 38px;
+}
+
+.search-form-add-guests-button:hover {
+    color:#000000;
+    background-color: #EAEBCB;
+}
+
+.search-form-add-guests-button:active {
+    color:#7DB5B2;
 }
 
 .search-form-row-reduced {
@@ -304,7 +335,6 @@ body {
 }
 
 .search-map {
-    margin-top: -396px;
     height: 473px;
     overflow: hidden;
 }
@@ -349,6 +379,14 @@ body {
     min-width: 120px;
 }
 
+.dev-logo:hover path {
+    fill:#7DB4AE;
+}
+
+.dev-logo:active path {
+    fill:#C7BD94;
+}
+
 .social-button {
     display: flex;
     align-items: center;
@@ -357,6 +395,10 @@ body {
     height: 48px;
     min-width: 48px;
     background-color: #78B3D6;
+}
+
+.social-button:active img {
+    opacity: 0.3;
 }
 
 /* Hotels Catalog */
