--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ body {
     margin-right: auto;
 }
 
-.search-form-title {
+.search-form-button {
     display: block;
     width: 100%;
     background-color: #7B6458;
@@ -496,7 +496,6 @@ body {
 .footer-hashtag {
     display: flex;
     width: calc(100% / 3);
-    text-align: center;
     align-items: center;
     justify-content: center;
     font-size: 20px;
