--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,7 @@ body {
 }
 
 .advantages-list {
+    z-index: 1;
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -321,6 +322,8 @@ body {
 /* Hotels Search */
 
 .search-header {
+    position: relative;
+    z-index: 1;
     background-color: #fff;
     padding-top: 50px;
     padding-bottom: 140px;
@@ -340,9 +343,7 @@ body {
 }
 
 .search-form {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
     margin-top: -86px;
     width: 568px;
     margin-left: auto;
@@ -350,7 +351,9 @@ body {
 }
 
 .search-form-button {
+    position: relative;
     display: block;
+    z-index: 1;
     width: 100%;
     background-color: #7B6458;
     color: #ffffff;
@@ -363,11 +366,22 @@ body {
 }
 
 .search-form-body {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -396px;
     padding-top: 55px;
     padding-bottom: 25px;
     background-color: #ffffff;
     display: flex;
     flex-wrap: wrap;
+    transition-duration: 1s;
+    transition-property: all;
+}
+
+.search-body-hidden {
+    visibility: hidden;
+    bottom: 0px;
 }
 
 .search-form-row {
